--- a/Subscribe.conf
+++ b/Subscribe.conf
@@ -5,3 +5,12 @@ geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubuserc
 resource_parser_url=https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
 excluded_routes=239.255.255.250/32
 udp_whitelist=1-442, 444-65535
+[dns]
+no-ipv6
+server=114.114.114.114
+server=202.141.176.93 
+server=202.141.178.13
+server=117.50.10.10
+server=223.5.5.5
+server=119.29.29.29:53
+server=119.28.28.28
