--- a/Subscribe.conf
+++ b/Subscribe.conf
@@ -1,8 +1,8 @@
 [general]
 server_check_url=http://cp.cloudflare.com/generate_204
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
+dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/LtrGCE/QuantumultX/main/IP.js
-resource_parser_url=https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
+resource_parser_url=https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/resource-parser.js
 excluded_routes=239.255.255.250/32
 udp_whitelist=1-442, 444-65535
 [dns]
@@ -14,3 +14,13 @@ server=117.50.10.10
 server=223.5.5.5
 server=119.29.29.29:53
 server=119.28.28.28
+[policy]
+[server_remote]
+[filter_remote]
+[rewrite_remote]
+[serer_local]
+[filter_local]
+[rewrite_local]
+[task_loacl]
+
+
